[Task] Add Dinky task to better support the development and execution of FlinkSQL (#10640)
# Conflicts:
#	docs/configs/docsdev.js
#	dolphinscheduler-task-plugin/dolphinscheduler-task-all/pom.xml
#	dolphinscheduler-task-plugin/pom.xml
#	dolphinscheduler-ui/src/views/projects/task/components/node/fields/index.ts
#	dolphinscheduler-ui/src/views/projects/task/components/node/format-data.ts
#	dolphinscheduler-ui/src/views/projects/task/components/node/tasks/index.ts
#	dolphinscheduler-ui/src/views/projects/task/components/node/types.ts
#	dolphinscheduler-ui/src/views/projects/task/constants/task-type.ts
#	dolphinscheduler-ui/src/views/projects/workflow/components/dag/dag.module.scss

3.0.1 合并dinky的代码.

--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -42,10 +42,10 @@ spring:
   messages:
     basename: i18n/messages
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5432/dolphinscheduler
-    username: root
-    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.3.15:3306/dolphin?useSSL=false&useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+    username: bigdata
+    password: "Huansi!@#456"
     hikari:
       connection-test-query: select 1
       minimum-idle: 5
@@ -101,7 +101,7 @@ registry:
   type: zookeeper
   zookeeper:
     namespace: dolphinscheduler
-    connect-string: localhost:2181
+    connect-string: 192.168.3.31:2181
     retry-policy:
       base-sleep-time: 60ms
       max-sleep: 300ms
