--- a/dolphinscheduler-task-plugin/pom.xml
+++ b/dolphinscheduler-task-plugin/pom.xml
@@ -15,7 +15,9 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>dolphinscheduler</artifactId>
         <groupId>org.apache.dolphinscheduler</groupId>
@@ -48,6 +50,12 @@
         <module>dolphinscheduler-task-all</module>
         <module>dolphinscheduler-task-emr</module>
         <module>dolphinscheduler-task-blocking</module>
+<!--        <module>dolphinscheduler-task-k8s</module>-->
         <module>dolphinscheduler-task-zeppelin</module>
+<!--        <module>dolphinscheduler-task-jupyter</module>-->
+<!--        <module>dolphinscheduler-task-mlflow</module>-->
+<!--        <module>dolphinscheduler-task-openmldb</module>-->
+<!--        <module>dolphinscheduler-task-dvc</module>-->
+        <module>dolphinscheduler-task-dinky</module>
     </modules>
 </project>
